New feature - Analogic clocks

--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
+    <script defer src="js/javascript.js"></script>
   </head>
   <body>
     <header>
       <h1>It's meow O'Clock!🐱</h1>
     </header>
+
+    <div class="user-clock">
+      <button class="btn">Check your time!</button>
+      <div class="your-clock"></div>
+    </div>
 
     <div class="clock">
       <div class="HI">
@@ -48,7 +54,6 @@
         </div>
       </div>
     </div>
-    <footer>&#169;</footer>
-    <script src="js/javascript.js"></script>
+    <footer>Project #1 from my portfolio</footer>
   </body>
 </html>
