Added mobile style version, footer and tab icon

--- a/index.html
+++ b/index.html
@@ -4,56 +4,58 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Open+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/png" href="img/clock-icon-2.png" />
     <script defer src="js/javascript.js"></script>
+    <title>Cat'o'Clock</title>
   </head>
   <body>
     <header>
-      <h1>It's meow O'Clock!🐱</h1>
+      <h1>It's Cat'O'Clock!</h1>
     </header>
 
-    <div class="user-clock">
-      <button class="btn">Check your time!</button>
-      <div class="your-clock"></div>
-    </div>
-
-    <div class="clock">
-      <div class="HI">
-        <h2 class="label">Hawaii,</h2>
-        <h3 class="capital">Honolulu</h3>
-        <div class="digital-clock clock-HI"></div>
-        <div class="analogic a-c-HI">
-          <div class="hh-pointer-hi hour-pointer"></div>
-          <div class="mm-pointer-hi minutes-pointer"></div>
-          <div class="ss-pointer-hi seconds-pointer"></div>
-          <div class="center"></div>
-        </div>
-      </div>
-
-      <div class="PT">
-        <h2 class="label">Portugal,</h2>
-        <h3 class="capital">Lisbon</h3>
-        <div class="digital-clock clock-PT"></div>
-        <div class="analogic a-c-PT">
-          <div class="hh-pointer-pt hour-pointer"></div>
-          <div class="mm-pointer-pt minutes-pointer"></div>
-          <div class="ss-pointer-pt seconds-pointer"></div>
-          <div class="center"></div>
-        </div>
-      </div>
-
-      <div class="JP">
-        <h2 class="label">Japan,</h2>
-        <h3 class="capital">Tokyo</h3>
-
-        <div class="digital-clock clock-JP"></div>
-        <div class="analogic a-c-JP">
-          <div class="hh-pointer-jp hour-pointer"></div>
-          <div class="mm-pointer-jp minutes-pointer"></div>
-          <div class="ss-pointer-jp seconds-pointer"></div>
-          <div class="center"></div>
-        </div>
+    <div class="HI">
+      <h2 class="label">Hawaii,</h2>
+      <h3 class="capital">Honolulu</h3>
+      <div class="digital-clock clock-HI"></div>
+      <div class="analogic a-c-HI">
+        <div class="hh-pointer-hi hour-pointer"></div>
+        <div class="mm-pointer-hi minutes-pointer"></div>
+        <div class="ss-pointer-hi seconds-pointer"></div>
+        <div class="center"></div>
       </div>
     </div>
-    <footer>Project #1 from my portfolio</footer>
+
+    <div class="PT">
+      <h2 class="label">Portugal,</h2>
+      <h3 class="capital">Lisbon</h3>
+      <div class="digital-clock clock-PT"></div>
+      <div class="analogic a-c-PT">
+        <div class="hh-pointer-pt hour-pointer"></div>
+        <div class="mm-pointer-pt minutes-pointer"></div>
+        <div class="ss-pointer-pt seconds-pointer"></div>
+        <div class="center"></div>
+      </div>
+    </div>
+
+    <div class="JP">
+      <h2 class="label">Japan,</h2>
+      <h3 class="capital">Tokyo</h3>
+      <div class="digital-clock clock-JP"></div>
+      <div class="analogic a-c-JP">
+        <div class="hh-pointer-jp hour-pointer"></div>
+        <div class="mm-pointer-jp minutes-pointer"></div>
+        <div class="ss-pointer-jp seconds-pointer"></div>
+        <div class="center"></div>
+      </div>
+    </div>
+    <footer>
+      <p>2023 Catarina Concei&#231;&#227;o</p>
+    </footer>
   </body>
 </html>
