--- a/index.html
+++ b/index.html
@@ -21,37 +21,40 @@
 
     <div class="HI">
       <h2 class="label">Hawaii,</h2>
-      <h3 class="capital">Honolulu</h3>
+      <h3 class="capital">Honolulu &#40;GMT &#8722;10&#58;00&#41;</h3>
       <div class="digital-clock clock-HI"></div>
       <div class="analogic a-c-HI">
         <div class="hh-pointer-hi hour-pointer"></div>
         <div class="mm-pointer-hi minutes-pointer"></div>
         <div class="ss-pointer-hi seconds-pointer"></div>
         <div class="center"></div>
+        <div class="start"></div>
       </div>
     </div>
 
     <div class="PT">
       <h2 class="label">Portugal,</h2>
-      <h3 class="capital">Lisbon</h3>
+      <h3 class="capital">Lisbon &#40;GMT &#43;00&#58;00&#41;</h3>
       <div class="digital-clock clock-PT"></div>
       <div class="analogic a-c-PT">
         <div class="hh-pointer-pt hour-pointer"></div>
         <div class="mm-pointer-pt minutes-pointer"></div>
         <div class="ss-pointer-pt seconds-pointer"></div>
         <div class="center"></div>
+        <div class="start"></div>
       </div>
     </div>
 
     <div class="JP">
       <h2 class="label">Japan,</h2>
-      <h3 class="capital">Tokyo</h3>
+      <h3 class="capital">Tokyo &#40;GMT &#43;10&#58;00&#41;</h3>
       <div class="digital-clock clock-JP"></div>
       <div class="analogic a-c-JP">
         <div class="hh-pointer-jp hour-pointer"></div>
         <div class="mm-pointer-jp minutes-pointer"></div>
         <div class="ss-pointer-jp seconds-pointer"></div>
         <div class="center"></div>
+        <div class="start"></div>
       </div>
     </div>
     <footer>
